# simple_snowflake_mcp

./: .env.example  .github_commit_message.txt  README.md  config.yaml  pyproject.toml
.github/workflows/: workflow.yml
src/simple_snowflake_mcp/: server.py
